Normalization and linear transformation

--- a/Scaling.ipynb
+++ b/Scaling.ipynb
@@ -60,6 +60,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Technique         | Best For                                                                 | Avoid When                                      |\n",
+    "|--------------------|-------------------------------------------------------------------------|------------------------------------------------|\n",
+    "| **StandardScaler** | Normally distributed data, algorithms assuming standard normal          | Data with significant outliers                 |\n",
+    "| **MinMaxScaler**   | Deep learning, features with varying magnitudes                        | Data with outliers                             |\n",
+    "| **MaxAbsScaler**   | Sparse data                                                            | Dense datasets                                 |\n",
+    "| **RobustScaler**   | Data with outliers                                                     | Outliers are not present                       |\n",
+    "| **Normalizer**     | Proportions, cosine similarity-based models                            | Magnitudes are significant                     |\n",
+    "\n",
+    "Choose the technique that aligns with the assumptions of the algorithm and the characteristics of your dataset!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 68,
    "metadata": {},
