--- a/preprocessing/outliers.ipynb
+++ b/preprocessing/outliers.ipynb
@@ -291,14 +291,113 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "In **Seaborn**, you can visually check for outliers using various types of plots. Below are some common methods to detect outliers in your data:\n",
     "\n",
+    "### 1. **Boxplot** (Most Common Method)\n",
+    "A **boxplot** is a great tool to visually detect outliers. It displays the distribution of data through **quartiles** and shows any data points that fall outside the whiskers as potential outliers.\n",
     "\n",
-    "\n"
+    "#### Code Example:\n",
+    "```python\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Sample data\n",
+    "sns.set(style=\"whitegrid\")\n",
+    "data = sns.load_dataset(\"tips\")  # Example dataset\n",
+    "\n",
+    "# Boxplot for visualizing outliers in the 'total_bill' column\n",
+    "sns.boxplot(x=data['total_bill'])\n",
+    "plt.title('Boxplot for Total Bill')\n",
+    "plt.show()\n",
+    "```\n",
+    "\n",
+    "#### How to Interpret:\n",
+    "- **Whiskers**: The lines extending from the box represent the range within 1.5 times the **interquartile range (IQR)** from the 1st and 3rd quartiles.\n",
+    "- **Outliers**: Points outside of the whiskers are considered outliers and are plotted individually.\n",
+    "\n",
+    "### 2. **Violin Plot**\n",
+    "A **violin plot** combines aspects of boxplot and density plot, providing a deeper understanding of the distribution. It’s helpful for detecting outliers in continuous data.\n",
+    "\n",
+    "#### Code Example:\n",
+    "```python\n",
+    "# Violin plot for visualizing outliers in the 'total_bill' column\n",
+    "sns.violinplot(x=data['total_bill'])\n",
+    "plt.title('Violin Plot for Total Bill')\n",
+    "plt.show()\n",
+    "```\n",
+    "\n",
+    "#### How to Interpret:\n",
+    "- The width of the violin at various values indicates the density of the data. Outliers might appear as points outside the main body of the violin.\n",
+    "\n",
+    "### 3. **Scatter Plot**\n",
+    "For two or more continuous variables, a **scatter plot** can be helpful for identifying outliers that may appear far away from the rest of the data points.\n",
+    "\n",
+    "#### Code Example:\n",
+    "```python\n",
+    "# Scatter plot for visualizing outliers in the 'total_bill' vs 'tip' columns\n",
+    "sns.scatterplot(x=data['total_bill'], y=data['tip'])\n",
+    "plt.title('Scatter Plot of Total Bill vs Tip')\n",
+    "plt.show()\n",
+    "```\n",
+    "\n",
+    "#### How to Interpret:\n",
+    "- Outliers will appear as points far away from the majority of data points in the plot.\n",
+    "\n",
+    "### 4. **Pairplot**\n",
+    "If you want to visualize the relationships between multiple variables and identify potential outliers in a pairwise manner, you can use **pairplot**.\n",
+    "\n",
+    "#### Code Example:\n",
+    "```python\n",
+    "# Pairplot for visualizing relationships between multiple columns\n",
+    "sns.pairplot(data[['total_bill', 'tip', 'size']])\n",
+    "plt.title('Pairplot for Total Bill, Tip, and Size')\n",
+    "plt.show()\n",
+    "```\n",
+    "\n",
+    "#### How to Interpret:\n",
+    "- The diagonal shows the univariate distribution (with histograms), and the off-diagonal plots show relationships between pairs of variables.\n",
+    "- Outliers will appear as points far away from the general trend in any of the scatter plots.\n",
+    "\n",
+    "### 5. **Swarm Plot**\n",
+    "A **swarm plot** is another method for visualizing data points, where individual data points are plotted in a way that avoids overlap. This can help you see if there are any outliers in categorical or continuous data.\n",
+    "\n",
+    "#### Code Example:\n",
+    "```python\n",
+    "# Swarm plot for visualizing outliers in the 'total_bill' column by 'time' category\n",
+    "sns.swarmplot(x='time', y='total_bill', data=data)\n",
+    "plt.title('Swarm Plot for Total Bill by Time')\n",
+    "plt.show()\n",
+    "```\n",
+    "\n",
+    "#### How to Interpret:\n",
+    "- Outliers are displayed as points that are far away from the others on the plot.\n",
+    "\n",
+    "### 6. **Histogram**\n",
+    "A **histogram** shows the frequency distribution of the data. While not specifically designed for outlier detection, it can give you an idea of whether data is spread across a large range, potentially indicating outliers.\n",
+    "\n",
+    "#### Code Example:\n",
+    "```python\n",
+    "# Histogram for visualizing the distribution of the 'total_bill' column\n",
+    "sns.histplot(data['total_bill'], kde=True)\n",
+    "plt.title('Histogram for Total Bill')\n",
+    "plt.show()\n",
+    "```\n",
+    "\n",
+    "#### How to Interpret:\n",
+    "- Outliers could appear as bars far from the rest of the data distribution.\n",
+    "\n",
+    "### Summary of Methods:\n",
+    "- **Boxplot**: Shows the distribution, quartiles, and potential outliers as points outside the whiskers.\n",
+    "- **Violin Plot**: Combines boxplot and density plot, providing more detailed information about the distribution.\n",
+    "- **Scatter Plot**: Helps visualize relationships between two continuous variables and detect points that are far from the rest.\n",
+    "- **Pairplot**: For visualizing pairwise relationships between multiple variables, useful for detecting outliers in multi-dimensional data.\n",
+    "- **Swarm Plot**: Helps visualize individual data points in categorical data to detect outliers.\n",
+    "- **Histogram**: Useful for understanding the distribution and spotting outliers in a univariate dataset.\n",
+    "\n",
+    "These visualizations can help you identify and confirm outliers before deciding on how to handle them (e.g., removing or transforming the outliers)."
    ]
   }
  ],
