--- a/preprocessing/NonLinearTransformation.ipynb
+++ b/preprocessing/NonLinearTransformation.ipynb
@@ -233,6 +233,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Quantile Transformation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
