master class on SVM

--- a/preprocessing/Feature-encoding.ipynb
+++ b/preprocessing/Feature-encoding.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -305,12 +305,12 @@
     "\n",
     "\n",
     "keys = {key: i for i, key in enumerate(categories)}\n",
-    "print(keys)"
+    "print(keys)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -383,15 +383,59 @@
     }
    ],
    "source": [
-    "hot_data=data.copy(deep=True)\n",
-    "hot_data=hot_data.drop(columns=['Animal'])\n",
-    "hot_data=temp.join(hot_data)\n",
+    "hot_data=temp.join(data.drop(columns=['Animal']).copy(deep=True))\n",
     "print(hot_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import pandas as pd\n",
+    "# from sklearn.compose import ColumnTransformer\n",
+    "# from sklearn.preprocessing import OneHotEncoder\n",
+    "\n",
+    "# # Sample DataFrame\n",
+    "# data = pd.DataFrame({\n",
+    "#     'Animal': ['cat', 'dog', 'fish', 'cow', 'sheep', 'cat', 'dog',\n",
+    "#                'sheep', 'cat', 'cow', 'fish', 'dog', 'bird', 'cat',\n",
+    "#                'bird', 'fish', 'fish', 'dog', 'bird', 'cow'],\n",
+    "#     'Count': [2, 4, 5, 1, 4, 2, 2, \n",
+    "#               2, 3, 1, 1, 4, 2, 3, \n",
+    "#               5, 1, 4, 2, 2, 3],\n",
+    "#     'Weight': [4.5, 6.2, 5.0, 2.1, 6.8, 4.8, 4.5, \n",
+    "#                6.2, 5.0, 2.1, 6.8, 4.8, 4.5, 6.2, \n",
+    "#                5.0, 2.1, 6.8, 4.8, 6.8, 4.8]\n",
+    "# })\n",
+    "\n",
+    "# # Define column transformer\n",
+    "# column_transformer = ColumnTransformer(\n",
+    "#     transformers=[\n",
+    "#         ('ohe', OneHotEncoder(sparse_output=False, drop=None), ['Animal']),  # One-hot encode 'Animal'\n",
+    "#     ],\n",
+    "#     remainder='passthrough'  # Keep the remaining columns as is\n",
+    "# )\n",
+    "\n",
+    "# # Transform data\n",
+    "# transformed_data = column_transformer.fit_transform(data)\n",
+    "\n",
+    "# # Get feature names for the one-hot encoded columns\n",
+    "# ohe_feature_names = column_transformer.named_transformers_['ohe'].get_feature_names_out(['Animal'])\n",
+    "\n",
+    "# # Create DataFrame with new column names\n",
+    "# transformed_df = pd.DataFrame(transformed_data, columns=list(ohe_feature_names) + ['Count', 'Weight'])\n",
+    "\n",
+    "# # Convert categorical columns to int for readability\n",
+    "# transformed_df[ohe_feature_names] = transformed_df[ohe_feature_names].astype(int)\n",
+    "\n",
+    "# print(transformed_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
